// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardList test with Snapshot Testing should show cardlist correctly 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-md-6 col-md-offset-3"
    >
      <div
        className="alert alert-warning"
        style={
          Object {
            "margin": "20px 0 0",
          }
        }
      >
        <p>
          No results were found.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`CardList test with Snapshot Testing should show cardlist with props correctly 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-md-6 col-md-offset-3"
    >
      <div
        className="card-docs"
        style={
          Object {
            "borderRadius": "3px",
            "margin": "20px 0",
            "padding": "20px",
          }
        }
      >
        <p>
          Quote 
          <strong>
            #
            1
          </strong>
        </p>
        <p>
          "
          Test
          "
        </p>
        <p>
          <strong>
            -
            <em>
              Anonymous
            </em>
          </strong>
        </p>
      </div>
      <div
        className="card-docs"
        style={
          Object {
            "borderRadius": "3px",
            "margin": "20px 0",
            "padding": "20px",
          }
        }
      >
        <p>
          Quote 
          <strong>
            #
            2
          </strong>
        </p>
        <p>
          "
          Test
          "
        </p>
        <p>
          <strong>
            -
            <em>
              Anonymous
            </em>
          </strong>
        </p>
      </div>
      <div
        className="alert alert-danger"
        style={
          Object {
            "margin": "20px 0 0",
          }
        }
      >
        <p>
          Something went wrong. Please try again in a few moments.
        </p>
      </div>
    </div>
  </div>
</div>
`;
